--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
+/* Reset CSS (JANGAN DIHAPUS) */
+html, body,
+ul, ol, li,
+h1, h2, h3, h4, h5, h6, p,
+form, input, div {
+  margin: 0;
+  padding: 0;
+}
+
+ul  li {
+  list-style-type: none;
+}
+
+/*mulai code disini */
+.container{
+    width: 1170px;
+margin: 0 auto;
+}
+header a{
+    float: left;
+    display: block;
+}
+header {
+    font-family: sans-serif;
+    position: relative;
+    width: 100%;
+    height: 80px;
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1);
+}
+header a{
+    float: left;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: black;
+    text-decoration: none;
+    line-height: 80px;
+    position: relative;
+    z-index: 10;
+    text-align: center;
+    margin: 0 10px;
+    display: inline;
+}header .logo{
+    font-size: 36px;
+    line-height: 80px;
+    float: left;
+
+}
 
